2008-04-16  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-interp.c (_syx_interp_frame_to_context): again do not copy because we have to reference the frame, not important if the context will die for now

	* syx/syx-object.c (syx_process_new): reset frame pointer

	* syx/syx-interp.c (_syx_interp_switch_process): really switch process

	* syx/syx-parser.c (syx_parser_new): do not erase scopes

2008-04-15  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-interp.h (struct SyxInterpFrame): add detached_frame

	* syx/syx-interp.c (_syx_interp_frame_to_context): copy the arguments
	(syx_interp_push_block_closure): detach the current frame

	* syx/syx-object.h (syx_string_new_unref): renamed from syx_string_new_ref

	* configure.ac: use -g3 for info and full debug modes

	* syx/syx-interp.h (SYX_PRIM_FAIL): a lot semplified

	* syx/syx-parser.c (_syx_parser_find_temporary_name): fix variable name resolution for optimized blocks

	* syx/syx-interp.c (syx_process_execute_scheduled): usually next instruction is not bigger than the bytecodes count until the end of the process
	(syx_process_execute_blocked): same here
	(syx_interp_leave_and_answer): clear the frame

	* syx/syx-parser.c (_syx_parser_parse_optimized_block): do not create a new scope but share variables with the outer context

2008-04-14  Luca Bruno  <lethalman88@gmail.com>

	* syx/syx-parser.c (_syx_parser_parse_optimized_block): increase method temporary stack to hold optimized block temporaries

	* syx/syx-interp.c (_syx_interp_find_temporary): forgot to change the code when copied find_argument
	(_syx_interp_find_argument): fixed

	* syx/syx-interp.h (syx_interp_stack_peek): fix

	* syx/syx-parser.c (_syx_scope_free): added
	(syx_parser_free): fix leak
	Clear scope tops.

	* syx/syx-interp.h (struct SyxInterpFrame): removed ensure_block

	* st/kernel/Set.st: forgot header

	* syx/syx-interp.c (_syx_interp_find_temporary): added
	(_syx_interp_find_argument): added